frontend/express/public/stylesheets/main.css
/* ... */
.big-numbers-v2 .big-numbers .trend i { font-size: 13px; }
.big-numbers-v2 .big-numbers .trend.u { color:#83C986; }
.big-numbers-v2 .big-numbers .trend.d { color:#DB6E6E; }

.google-disabled .big-numbers.radio .color { display: none; }
.google-disabled .big-numbers.radio { cursor: default; }
.google-disabled .big-numbers.radio:hover { opacity: 1; }

/* APP NAVIGATION */
#app-management-bar { z-index:3; border-radius: 2px; }
#app-management-bar #app-nav-head { padding-left:15px; }
#app-nav-title { overflow:hidden; text-overflow:ellipsis; white-space:nowrap; max-width:85px; float:left; padding-top:4px; }
#app-nav { width:190px;  display:none; text-align:right; height:100%; position:fixed; left:31px; z-index:997; padding-bottom: 120px; box-sizing: border-box; box-shadow: inset -1px 0 0 0 #d4d4d4; background-color: rgba(239, 239, 239, 0.7); }
#app-nav-head { height:27px; padding:15px 20px 15px 15px; color:#636363; font:18px Ubuntu,Helvetica,sans-serif; line-height:111%; text-align:left; background-color: #ECECEC; border-bottom:1px solid #d0d0d0; }
	#app-nav-head .button-container { overflow:hidden; position:absolute; top:22px; right:10px; }
.app-container { cursor:pointer; height:26px; padding:8px 12px; padding-left:32px; overflow:hidden; border-top: 1px solid #d0d0d0; background-color: #efefef; }
.app-container:first-child { border-top:none; }
.app-container:hover { background-color: #dedede; }
.app-container.active { background-color: #dedede; }
	.app-container .logo { float:left; width:20px; height:20px; background-size:22px 22px; margin-top:2px; border-radius:4px; border:1px solid #a2a2a2; background-position:center; }
	.app-container .name { width:125px; text-align:left; text-overflow:ellipsis; white-space:nowrap; overflow:hidden; float:left; margin-left:10px; padding-top:6px; color:#6b6b6b; font:13px Ubuntu,Helvetica,sans-serif; }
	.new-app-name { width:300px; text-align:left; text-overflow:ellipsis; white-space:nowrap; overflow:hidden; }
#sort-app-button { padding: 7px 1px; }
#sort-app-button i { font-size: 20px; margin: 0; line-height: 16px; }
/* APP NAVIGATION END */

#app-management-bar { overflow:hidden; width:180px; position:fixed; left:242px; top:79px; text-align:right; background-color:#efefef; max-height:580px; box-sizing: border-box; box-shadow: 0 0 0 1px #d0d0d0; }
#app-management-bar .app-container { padding-left:10px; position: relative; }
#app-management-bar .app-container.active { }
#app-management-bar .app-container.active:hover { opacity:1; }

#app-management-bar.expand { width:300px; box-shadow: 0 5px 18px 0 #a5a5a5, 0 0 0 1px #d0d0d0; }
#app-management-bar.expand .app-container .name { width:245px; transition:width 200ms; }
#app-management-bar .nav-search input { transition:width 200ms; }
#app-management-bar.expand .nav-search input { width:278px; transition:width 200ms; }

#management-app-container { max-height: 490px; }
#manage-new-app { display: none; }
.app-details input { width:310px; }
#add-new-app .hint, .app-details .hint { padding-top: 8px; font-size:11px; color:#B7B6B6; clear: both; }
#add-app-button {display: block; text-align: center; padding: 10px 0 12px 0; border-bottom: 1px solid #d0d0d0; font: 13px Ubuntu,Helvetica,sans-serif; color: #6b6b6b; cursor: pointer;}
#add-app-button:hover{background-color: #dedede;}
#add-app-button i {color: #2fa732; margin-right: 5px; font-size: 18px; display: inline-block; vertical-align: bottom; margin-bottom: -4px;}
#app_details {margin-left: 10px; text-decoration:underline; font-size: 11px; color: #2FA732; cursor: pointer;}
.app-details table.d-table {border-collapse:separate; border-bottom-left-radius:2px; border-bottom-right-radius:2px;}
.app-details table.d-table td  {border-top:1px solid #ececec; border-bottom:none;}
.app-details table.d-table tr:first-child td  {border-top:none; border-bottom:none;}
.app_details_table{min-width: 800px; position: relative;}
.dialog.app_details_table .indicator{margin-bottom: 0;}
.dialog.app_details_table .buttons { box-shadow: inset 0 1px 0 #ccc; padding: 13px; margin-top: -1px; }
.app_details_table table.d-table{margin-bottom:0;}
.app_details_table td{border-left: 1px solid #ececec; line-height:25px;}
.app_details_table table.d-table tr td.second-header{width: 150px;}
.app_details_table .indicator {display:none;}
.dialog.app_details_table {border:none !important; box-shadow: 0 2px 14px 0 rgba(0,0,0,0.25);}
.dialog.app_details_table table {border-left:none; border-right:none;}
.dialog.app_details_table .d-table th:first-child{border-top-left-radius: 0px;}
.dialog.app_details_table .d-table th:last-child{border-top-right-radius: 0px;}
.dialog.app_details_table .title { font: 19px Ubuntu,Helvetica,sans-serif;
    line-height: 100%;
    color: #636363;
    margin-left: 0px;
    text-transform: uppercase; height:auto; padding:20px 15px 15px 20px; border-bottom: 1px solid #cccccc;}
.app_details_table table.d-table tr:nth-child(odd):hover {
    background-color: #FFFFFF;
}

.app_details_table table.d-table tr:nth-child(even):hover {
    background-color: #F9F9F9;
}

#code-countly {background-color: #fff; border-radius: 2px; padding: 20px; border: 1px solid #D0D0D0; margin-left: 199px;}
#code-countly h3 {font-size: 16px; color: #636363; margin-top: 0px;}
#code-countly p {font-size: 14px; line-height: 20px; color: #AFAFAF;}
#code-countly p.select-platforms {font-size: 12px; text-transform:uppercase; color: #D4D4D4;}
#code-countly .sdks {overflow: auto;}
#code-countly .sdks a{color: #2FA732; float: left; text-decoration: none; font-size: 14px; margin-right: 20px;}
#code-countly .sdks a:hover { text-decoration: underline; }
#code-countly-content {margin-left: 135px;}
#code-countly-logo {background-image: url('../images/dashboard/apps-sdk-icon.svg'); float: left; width: 100px; height:100px; background-repeat: no-repeat; background-position: 50% 0%;}

/* TABLES */
.dataTables_wrapper { margin:15px 0; position: relative; }
/* ... */

